--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -69,7 +69,23 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Equation</strong>
+                <strong>Equation<br> (Summation)</strong>
+            </td>
+            <td>
+                <DisplayEquation equation="\frac{\sum_{i=1}^{n} x_iW_i}{\sum_{i=1}^{n} W_i}" />            
+            </td>
+	    <td>
+            	    
+        </td>
+	    <td>
+                
+        </td>
+        </tr>
+    </tbody>
+    <tbody>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Equation <br> (Integral)</strong>
             </td>
             <td>
                 <DisplayEquation equation="\\Delta V = V_2 - V_1" />            
