--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -72,13 +72,13 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 <strong>Equation<br> (Summation)</strong>
             </td>
             <td>
-                <DisplayEquation equation="\frac{\sum_{i=1}^{n} x_iW_i}{\sum_{i=1}^{n} W_i}" />            
+                <DisplayEquation equation="\bar{x} = \frac{\sum \tilde{x}_i m_i}{\sum m_i}" />            
             </td>
 	    <td>
-            	    
+            	<DisplayEquation equation="\bar{x} = \frac{\sum \tilde{x}_i W_i}{\sum W_i}" />
         </td>
 	    <td>
-                
+                <DisplayEquation equation="\bar{x} = \frac{\sum \tilde{x}_i V_i}{\sum V_i}" />
         </td>
         </tr>
     </tbody>
