--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -46,7 +46,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 <strong>Center of Gravity</strong>
             </th>
             <th class="table-shaded"> 
-                <strong>Center of Volume</strong>
+                <strong>Center of Volume <br> (Centroid)</strong>
             </th>	
         </tr>
     </thead>
@@ -56,13 +56,13 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 <strong>Definition</strong>
             </td>
             <td>
-                
+                Average location of <br> the mass of an object
             </td>
 	    <td>
-              
+               Average location of <br> the weight of an object 
            </td>
 	    <td> 
-
+		Geometric center <br> of an object 
 	   </td>
            </tr>
     </tbody>
@@ -88,7 +88,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 <strong>Equation <br> (Integral)</strong>
             </td>
             <td>
-                <DisplayEquation equation="\\Delta V = V_2 - V_1" />            
+                            
             </td>
 	    <td>
             	    
