--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -75,10 +75,10 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 <DisplayEquation equation="\\bar{x} = \\frac{\\sum \\tilde{x}_i m_i}{\\sum m_i}" />            
             </td>
 	    <td>
-            	<DisplayEquation equation="\bar{x} = \frac{\sum \tilde{x}_i W_i}{\sum W_i}" />
+            	<DisplayEquation equation="\\bar{x} = \\frac{\\sum \\tilde{x}_i W_i}{\\sum W_i}" />
         </td>
 	    <td>
-                <DisplayEquation equation="\bar{x} = \frac{\sum \tilde{x}_i V_i}{\sum V_i}" />
+                <DisplayEquation equation="\\bar{x} = \frac{\\sum \\tilde{x}_i V_i}{\\sum V_i}" />
         </td>
         </tr>
     </tbody>
