--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -86,7 +86,7 @@ The center of mass, center of gravity, and center of volume are all represented 
             	<DisplayEquation equation="\\bar{x} = \\frac{\\sum \\tilde{x}_i W_i}{\\sum W_i}" />
         </td>
 	    <td>
-                <DisplayEquation equation="\\bar{x} = \frac{\\sum \\tilde{x}_i V_i}{\\sum V_i}" />
+                <DisplayEquation equation="\\bar{x} = \\frac{\\sum \\tilde{x}_i V_i}{\\sum V_i}" />
         </td>
         </tr>
     </tbody>
