--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -38,7 +38,7 @@ The center of mass, center of gravity, and center of volume of an object are all
 <\p>
 
 <p>
-The center of mass, center of gravity, and center of volume are all represented by a point <DisplayEquation equation="(\\bar{x},\\bar{y}, \\bar{z})" />.
+The center of mass, center of gravity, and center of volume are all represented by a point <InlineEquation equation="(\\bar{x},\\bar{y}, \\bar{z})" />.
 <\p>
 
 <DisplayTable id="mvdiag_table">
