--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -34,12 +34,12 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 <Section title="Center of Mass, Gravity, and Volume" id="center_of_mass">
 
 <p>
-The center of mass, center of gravity, and center of volume of an object are all veyr similar. In fact, they are all the same if the density of the object is constant and gravity is constant along an object. 
-<\p>
+The center of mass, center of gravity, and center of volume of an object are all very similar. In fact, they are all the same if the density of the object is constant and gravity is constant along an object. 
+</p>
 
 <p>
 The center of mass, center of gravity, and center of volume are all represented by a point <InlineEquation equation="(\\bar{x},\\bar{y}, \\bar{z})" />.
-<\p>
+</p>
 
 <DisplayTable id="mvdiag_table">
     <thead>
