--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -77,7 +77,7 @@ The center of mass, center of gravity, and center of volume are all represented 
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Equation<br> (Summation)</strong>
+                <strong>Equation<br> (Summation <br> Form)</strong>
             </td>
             <td>
                 <DisplayEquation equation="\\bar{x} = \\frac{\\sum \\tilde{x}_i m_i}{\\sum m_i}" />            
@@ -93,7 +93,7 @@ The center of mass, center of gravity, and center of volume are all represented 
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                <strong>Equation <br> (Integral)</strong>
+                <strong>Equation <br> (Integral <br> Form)</strong>
             </td>
             <td>
                  <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dm}{\\int dm}   />        
