--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -96,13 +96,13 @@ The center of mass, center of gravity, and center of volume are all represented 
                 <strong>Equation <br> (Integral <br> Form)</strong>
             </td>
             <td>
-                 <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dm}{\\int dm}   />        
+                 <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dm}{\\int dm}"   />        
             </td>
 	    <td>
-            	  <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dW}{\\int dW}   />   
+            	  <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dW}{\\int dW}"  />   
         </td>
 	    <td>
-                <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dV}{\\int dV}   /> 
+                <DisplayEquation equation=" \\bar{x} = \\frac{\\int \\tilde{x} \\,dV}{\\int dV}"  /> 
         </td>
         </tr>
     </tbody>
