--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -155,7 +155,7 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 </SubSection>
 <!-- Lectures 28, 29  -->
 
-<SubSubSection title="Basic Shapes" id="basic_shapes">
+<SubSubSection title="Centroids of Basic Shapes" id="basic_shapes">
     <p>
         The centers of mass listed below are all computed directly from the integral <a href="#rcm-cm">#rcm-cm</a>. Note
         the center of mass provided is the vector from point \(O\) (the reference origin).
