--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -374,7 +374,11 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
             </p>
         </div>
     </DisplayEquationCustom>
-	
+
+<SubSubSection = "Finding Centroids Using Composite Shapes">
+
+</SubSubSection>
+
 </SubSection>
 
 
