--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -375,7 +375,7 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
         </div>
     </DisplayEquationCustom>
 
-<SubSubSection = "Finding Centroids Using Composite Shapes">
+<SubSubSection title = "Finding Centroids Using Composite Shapes">
 
 </SubSubSection>
 
