--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -156,6 +156,38 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 <!-- Lectures 28, 29  -->
 
 <SubSubSection title="Centroids of Basic Shapes" id="basic_shapes">
+
+<DisplayTable id="mvdiag_table">
+    <thead>
+        <tr>
+	    <th class="table-shaded"> 
+                <strong>Shape</strong>
+            </th>            
+	   <th class="table-shaded">
+		<strong><DisplayEquation equation=" \\bar{x}"/></strong>
+            </th>
+            <th class="table-shaded"> 
+                <strong><DisplayEquation equation=" \\bar{y}"/></strong>
+            </th>	
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nosideborderleft">
+                Rectangle
+		
+            </td>
+            <td>
+                <DisplayEquation equation="b/2" />
+            </td>
+	    <td> 
+		 <DisplayEquation equation="h/2" />
+	   </td>
+           </tr>
+    </tbody>
+</DisplayTable>
+
+
     <p>
         The centers of mass listed below are all computed directly from the integral <a href="#rcm-cm">#rcm-cm</a>. Note
         the center of mass provided is the vector from point \(O\) (the reference origin).
