--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -157,33 +157,31 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
 
 <SubSubSection title="Centroids of Basic Shapes" id="basic_shapes">
 
+<style>
+    /* CSS to center images in table cells */
+    td img {
+        display: block;
+        margin: 0 auto;
+    }
+</style>
+
 <DisplayTable id="mvdiag_table">
     <thead>
         <tr>
-	    <th class="table-shaded"> 
-                <strong>Shape</strong>
-            </th>            
-	   <th class="table-shaded">
-		<strong><DisplayEquation equation=" \\bar{x}"/></strong>
-            </th>
-            <th class="table-shaded"> 
-                <strong><DisplayEquation equation=" \\bar{y}"/></strong>
-            </th>	
+            <th class="table-shaded"><strong>Shape</strong></th>            
+            <th class="table-shaded"><strong><DisplayEquation equation=" \\bar{x}"/></strong></th>
+            <th class="table-shaded"><strong><DisplayEquation equation=" \\bar{y}"/></strong></th>    
         </tr>
     </thead>
     <tbody>
         <tr>
             <td class="nosideborderleft">
                 Rectangle
-		<Image src='/Statics/COMFigures/RectangleCentroid.png' width='3'> </Image>
+                <Image src='/Statics/COMFigures/RectangleCentroid.png' width='3' />
             </td>
-            <td>
-                <DisplayEquation equation="b/2" />
-            </td>
-	    <td> 
-		 <DisplayEquation equation="h/2" />
-	   </td>
-           </tr>
+            <td><DisplayEquation equation="b/2" /></td>
+            <td><DisplayEquation equation="h/2" /></td>
+        </tr>
     </tbody>
 </DisplayTable>
 
