--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -169,8 +169,8 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
     <thead>
         <tr>
             <th class="table-shaded"><strong>Shape</strong></th>            
-            <th class="table-shaded"><strong><DisplayEquation equation=" \\bar{x}"/></strong></th>
-            <th class="table-shaded"><strong><DisplayEquation equation=" \\bar{y}"/></strong></th>    
+            <th class="table-shaded"><strong><DisplayEquation equation=" \\boldsymbol{\\bar{x}}"/></strong></th>
+            <th class="table-shaded"><strong><DisplayEquation equation=" \\boldsymbol{\\bar{y}}"/></strong></th>    
         </tr>
     </thead>
     <tbody>
