--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -182,7 +182,7 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
     <tbody>
         <tr>
             <td class="nosideborderleft">
-                Rectangle
+                Rectangle <br>
                 <Image src='/Statics/COMFigures/RectangleCentroid.png' width='3' />
             </td>
             <td><DisplayEquation equation="b/2" /></td>
