--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -25,9 +25,9 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#basic_shapes'>Basic Shapes</a></li> 
-		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#simple_shapes'>Simplified Shapes</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#centroid'>Centroid</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#basic_shapes'>Centroid</a></li> 
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#simple_shapes'>Centroids of Basic Shapes</a></li>
+		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#simple_shapes'>Finding Centroids Using Composite Shapes</a></li>
       </ul>
       </div>
 
