--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -188,6 +188,47 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
             <td><DisplayEquation equation="b/2" /></td>
             <td><DisplayEquation equation="h/2" /></td>
         </tr>
+        <tr>
+            <td class="nosideborderleft">
+                Right Triangle <br>
+                
+            </td>
+            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="" /></td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                Isoceles Triangle <br>
+                
+            </td>
+            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="" /></td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                Circle <br>
+                
+            </td>
+            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="" /></td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                Semicircle <br>
+                
+            </td>
+            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="" /></td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                Quarter Circle <br>
+                
+            </td>
+            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="" /></td>
+        </tr>
+
     </tbody>
 </DisplayTable>
 
