--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -191,42 +191,42 @@ with similar equations for <InlineEquation equation="\\bar{y}" />.
         <tr>
             <td class="nosideborderleft">
                 Right Triangle <br>
-                
+                <Image src='/Statics/COMFigures/TriangleCentroid.png' width='3' />
             </td>
-            <td><DisplayEquation equation="" /></td>
-            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="b/3" /></td>
+            <td><DisplayEquation equation="h/3" /></td>
         </tr>
         <tr>
             <td class="nosideborderleft">
                 Isoceles Triangle <br>
-                
+                <Image src='/Statics/COMFigures/IsocelesTriangleCentroid.png' width='3' />
             </td>
-            <td><DisplayEquation equation="" /></td>
-            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="b/2" /></td>
+            <td><DisplayEquation equation="h/3" /></td>
         </tr>
         <tr>
             <td class="nosideborderleft">
                 Circle <br>
-                
+                <Image src='/Statics/COMFigures/CircleCentroid.png' width='3' />
             </td>
-            <td><DisplayEquation equation="" /></td>
-            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="r" /></td>
+            <td><DisplayEquation equation="r" /></td>
         </tr>
         <tr>
             <td class="nosideborderleft">
                 Semicircle <br>
-                
+                <Image src='/Statics/COMFigures/SemicircleCentroid.png' width='3' />
             </td>
-            <td><DisplayEquation equation="" /></td>
-            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="r" /></td>
+            <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
         </tr>
         <tr>
             <td class="nosideborderleft">
                 Quarter Circle <br>
-                
+                <Image src='/Statics/COMFigures/QuarterCircleCentroid.png' width='3' />
             </td>
-            <td><DisplayEquation equation="" /></td>
-            <td><DisplayEquation equation="" /></td>
+            <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
+            <td><DisplayEquation equation="\\frac{4r}{3\\pi}" /></td>
         </tr>
 
     </tbody>
