--- a/src/pages/sta/centers_of_mass.astro
+++ b/src/pages/sta/centers_of_mass.astro
@@ -108,6 +108,12 @@ The center of mass, center of gravity, and center of volume are all represented 
     </tbody>
 </DisplayTable>
 
+  <DisplayEquation title="When are Centers of Gravity, Mass, and Volume the same?" id="com" background="True" equation="" derivation="True">
+    
+      <Image src='/Statics/COMFigures/CoGMVDerivation.jpg' width='5'> </Image>
+
+  </DisplayEquation>
+
 </Section>
 
 <SubSection title="Centroid" id="centroid">
