--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -203,8 +203,134 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
 
 <SubSection title="Moment of inertia for typical shapes" id="typical_shapes">
 
-<Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='7'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
+    <center><em>Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/></em></center>
+    <center><em>Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/></em></center>
+    <DisplayTable class_="text-center" id="shapes_table">
+        <thead>
+            <tr>
+                <th class="table-shaded">
+            <strong>Shape</strong>
+                </th>
+                <th class="table-shaded" style="width:50%">
+                    <strong>Diagram</strong>
+                </th>
+                <th class="table-shaded"> 
+                    <strong>Equations</strong>
+                </th>	
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="nosideborderleft" style="vertical-align: middle">
+                    Rectangle
+                </td>
+                <td>
+                    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Rect.png' width='5'> </Image>
+                </td>
+            <td style="vertical-align: middle">
+                <InlineEquation equation="\\bar{I_{x'}} = \\frac{1}{12}b h^3" />    
+                <br>
+                <br>
+                <InlineEquation equation="\\bar{I_{y'}} = \\frac{1}{12}b^3 h" />
+                <br>
+                <br>
+                <InlineEquation equation="I_x = \\frac{1}{3}b h^3"/>
+                <br>
+                <br>
+                <InlineEquation equation="I_y = \\frac{1}{3}b^3 h"/>
+                <br>
+                <br>
+                <InlineEquation equation="J_c = \\frac{1}{12}bh(b^2+h^2)"/>
+            </td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td class="nosideborderleft" style="vertical-align: middle">
+                    Triangle
+                </td>
+                <td>
+                    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Tri.png' width='5'> </Image>
+                </td>
+            <td style="vertical-align: middle">
+                <InlineEquation equation="\\bar{I_{x'}} = \\frac{1}{36}bh^3" />
+                <br>
+                <br>
+                <InlineEquation equation="I_x = \\frac{1}{12}bh^3" />    
+            </td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td class="nosideborderleft" style="vertical-align: middle">
+                    Circle
+                </td>
+                <td>
+                    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Circle.png' width='5'> </Image>
+                </td>
+            <td style="vertical-align: middle">
+                <InlineEquation equation="\\bar{I_x} = \\bar{I_y}  = \\frac{1}{4} \\pi r^4" />
+                <br>
+                <br>
+                <InlineEquation equation="J_O= \\frac{1}{2} \\pi r^4"/>    
+            </td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td class="nosideborderleft" style="vertical-align: middle">
+                    Semicircle
+                </td>
+                <td>
+                    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Semi.png' width='5'> </Image>
+                </td>
+            <td style="vertical-align: middle">
+                <InlineEquation equation="I_x = I_y = \\frac{1}{8} \\pi r^4" />
+                <br>
+                <br>
+                <InlineEquation equation="J_O = \\frac{1}{4} \\pi r^4"/>    
+            </td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td class="nosideborderleft" style="vertical-align: middle">
+                    Quarter circle
+                </td>
+                <td>
+                    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Quart.png' width='5'> </Image>
+                </td>
+            <td style="vertical-align: middle">
+                <InlineEquation equation="I_x = I_y = \\frac{1}{16} \\pi r^4" />
+                <br>
+                <br>
+                <InlineEquation equation="J_O = \\frac{1}{8} \\pi r^4"/>    
+            </td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td class="nosideborderleft" style="vertical-align: middle">
+                    Ellipse
+                </td>
+                <td>
+                    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes_Elipse.png' width='5'> </Image>
+                </td>
+            <td style="vertical-align: middle">
+                <InlineEquation equation="\\bar{I_x} = \\frac{1}{4} \\pi a b^3" />
+                <br>
+                <br>
+                <InlineEquation equation="\\bar{I_y} = \\frac{1}{4} \\pi a^3 b"/>
+                <br>
+                <br>
+                <InlineEquation equation="J_O = \\frac{1}{4} \\pi ab(a^2+b^2)" />
 
+            </td>
+            </tr>
+        </tbody>
+        
+    </DisplayTable>
+    
 </SubSection>
 
 </Layout>
