--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -1137,7 +1137,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 	<Image src="/Dynamics/RigidBodyKinematics/GearsSignConvention2.png" width="7"></Image>
 	
 	<ol>
-      <li> <InlineEquation equation="\\vec{\\omega}_{1z}" /> and  <InlineEquation equation="\\vec{\\omega}_{2z}" /> have opposite signs (rotate in opposite direction) </li>
+      <li> <InlineEquation equation="\\omega_{1z}" /> and  <InlineEquation equation="\\omega_{2z}" /> have opposite signs (rotate in opposite direction) </li>
       <li>Smaller gears rotate faster</li>
     </ol>
 
